force-app/main/default/objects/Especialidad__c/Especialidad__c.object-meta.xml
<CustomObject>
    <label>Especialidad</label>
    <nameField>
        <label>Nombre de la Especialidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especialidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>