force-app/main/default/objects/Especialidad__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <label>Centro</label>
    <referenceTo>Centro__c</referenceTo>
    <relationshipLabel>Especialidades</relationshipLabel>
    <relationshipName>Especialidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>