force-app/main/default/objects/Especialidad__c/fields/ClaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ClaveUnica__c</fullName>
    <label>ClaveUnica</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>