force-app/main/default/objects/Especialidad__c/fields/Especialista__c.field-meta.xml
<CustomField>
    <fullName>Especialista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Especialista</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Especialista</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Especialidades</relationshipLabel>
    <relationshipName>Especialidades</relationshipName>
    <type>Lookup</type>
</CustomField>